更换依赖库

--- a/test/content.html
+++ b/test/content.html
@@ -7,7 +7,7 @@
 <body>
 <button id="test">content('hello world')</button> <button id="test2">content(document.getElementById('hidden-content'))</button>
 <div id="hidden-content" style="color:red;">我是DOM节点</div>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
