--- a/test/fixed.html
+++ b/test/fixed.html
@@ -5,7 +5,7 @@
 	<title>test</title>
 </head>
 <body style="height: 2400px;">
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
