--- a/test/iframe-input.html
+++ b/test/iframe-input.html
@@ -7,7 +7,7 @@
 <body>
 <div><label><input id="input" type="text" value="hello world" style="padding: 5px;font-size:18px" /></label></div>
 <button id="ok">传递值并关闭对话框</button>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
