--- a/test/openDialog.html
+++ b/test/openDialog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <button data-event="test">open dialog</button>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
