--- a/test/show.html
+++ b/test/show.html
@@ -50,7 +50,7 @@
 	</tr>
 </table>
 <button id="fixed" data-event="test">follow me</button>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
