--- a/test/showModal.html
+++ b/test/showModal.html
@@ -27,7 +27,7 @@
 		<td style="text-align: right; vertical-align: bottom;"><button data-event="test">follow me</button></td>
 	</tr>
 </table>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
