--- a/test/button.html
+++ b/test/button.html
@@ -5,7 +5,7 @@
 	<title>test</title>
 </head>
 <body>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
