--- a/test/close.html
+++ b/test/close.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <button id="test">close()</button>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
