--- a/test/iframe-content.html
+++ b/test/iframe-content.html
@@ -7,7 +7,7 @@
 <body>
 <div><label><input id="input" type="text" value="hello world" style="padding: 5px;font-size:18px" /></label></div>
 <button id="height">设置高度</button> <button id="open">弹新对话框</button>  <button id="remove">传值并关闭对话框</button>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
