--- a/test/iframe.html
+++ b/test/iframe.html
@@ -25,7 +25,7 @@
 <div id="doc">
 	<iframe id="test-iframe" src="about:blank" data-src="show.html"></iframe>
 </div>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
