--- a/test/title.html
+++ b/test/title.html
@@ -17,7 +17,7 @@
 <body>
 <button id="test">title('hello world')</button>
 <div id="hidden-content" style="color:red;display:none">我是DOM节点</div>
-<script src="../lib/sea-debug.js"></script>
+<script src="../lib/sea.js"></script>
 <script>
 seajs.config({
   alias: {
