--- a/test/iframe.html
+++ b/test/iframe.html
@@ -23,7 +23,7 @@
 <body>
 <h1>请在服务端预览（chrome本地会跨域）</h1>
 <div id="doc">
-	<iframe id="test-iframe" src="about:blank" data-src="show.html"></iframe>
+	<iframe id="test-iframe" src="about:blank" data-src="show-element.html"></iframe>
 </div>
 <script src="../lib/sea.js"></script>
 <script>
