--- a/test/showModal.html
+++ b/test/showModal.html
@@ -1,32 +1,11 @@
 <!doctype html>
-<html>
+<html lang="zh">
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
-	<style>
-		html, body {
-			height: 100%;
-		}
-	</style>
 </head>
 <body>
-<table style="width:100%; height:100%">
-	<tr>
-		<td style="text-align: left; vertical-align: top;"><button data-event="test">follow me</button></td>
-		<td style="text-align: center; vertical-align: top;"><button data-event="test">follow me</button></td>
-		<td style="text-align: right; vertical-align: top;"><button data-event="test">follow me</button></td>
-	</tr>
-	<tr>
-		<td style="text-align: left; vertical-align: middle;"><button data-event="test">follow me</button></td>
-		<td style="text-align: center; vertical-align: middle;"><button data-event="test">follow me</button></td>
-		<td style="text-align: right; vertical-align: middle;"><button data-event="test">follow me</button></td>
-	</tr>
-	<tr>
-		<td style="text-align: left; vertical-align: bottom;"><button data-event="test">follow me</button></td>
-		<td style="text-align: center; vertical-align: bottom;"><button data-event="test">follow me</button></td>
-		<td style="text-align: right; vertical-align: bottom;"><button data-event="test">follow me</button></td>
-	</tr>
-</table>
+<button data-event="test">open dialog</button>
 <script src="../lib/sea.js"></script>
 <script>
 seajs.config({
@@ -39,28 +18,25 @@ seajs.config({
 <script>
 seajs.use(['jquery', '../src/dialog'], function ($, dialog) {
 
-	if (top.dialog) {
-		// 仅用来测试跨窗口弹出
-		dialog = top.dialog;
-	}
-	
-	var d = dialog({
-		title: '定位到元素演示',
-		content: '风吹起的青色衣衫，夕阳里的温暖容颜，你比以前更加美丽，像盛开的花',
-		ok: function () {},
-		cancel: function () {
-			this.close();// 隐藏
-			return false;
-		}
-	});
 
 	$('button[data-event=test]').on('click', function () {
-		d.showModal(this);
-	});
+		var d = dialog({
+			title: '消息',
+			content: '风吹起的青色衣衫，夕阳里的温暖容颜，你比以前更加美丽，像盛开的花',
+			okValue: '确 定',
+			ok: function () {
+				var that = this;
+				setTimeout(function () {
+					that.title('提交中..');
+				}, 2000);
+				return false;
+			},
+			cancelValue: '取消',
+			cancel: function () {}
+		});
 
-	d.onshow = function () {
-		//console.log(this);
-	};
+		d.showModal();
+	});
 
 });
 </script>
